--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-    --mainColor: #5A4DB2;
+    --mainColor: #333237;
     --mainColorLight: #7666E3;
     --secondaryColor: #000000;
     --textColor: #eee;
@@ -86,6 +86,6 @@ header .nav-btn {
 
     }
     nav a {
-        font-size: 2.0rem
+        font-size: 4.0rem
     }
 }
