--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -22,7 +22,7 @@ header {
     align-items: center;
     height: 80 px;
     padding: 0 2rem;
-    background: var(--mainColor);
+    background: var(--secondaryColor);
     color: var(--textColor);
     font-size: 3.0rem;
 
@@ -36,7 +36,7 @@ nav a {
     text-decoration: none;
 }
 nav a:hover {
-    color: var(--secondaryColor);
+    color: var(--mainColor);
 }
 header .nav-btn {
     padding: 5px;
@@ -48,12 +48,15 @@ header .nav-btn {
     visibility: hidden;
     opacity: 0;
     font-size: 2.5rem;
+    
 }
 
 @media only screen and (max-width: 1024px) {
     header .nav-btn { 
         visibility: visible;
         opacity: 1;
+        color: var(--textColor);
+        padding: 20px;
     }
     header nav {
         position: fixed;
