Front End added textbox
Textbox fixed font size, outputs to console log and shows on screen

--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -95,6 +95,14 @@ header .nav-btn {
 
     }
     nav a {
-        font-size: 4.0rem
+        font-size: 4.0rem;
     }
+}
+.post {
+   font-size: 3.0rem;
+    color: var(--mainColorLight);
+    
+}
+.Textbox {
+ font-size: 3.0rem;
 }
