--- a/frontend/src/Pages/posts.css
+++ b/frontend/src/Pages/posts.css
@@ -7,16 +7,24 @@
     border: 1px solid black;
     padding: 16px;
     margin-bottom: 16px;
+    height: 300px;
   }
   
   .post-title {
-    font-size: 5px;
+    font-size: 2.0rem;
     font-weight: bold;
     margin-bottom: 8px;
+    color: white ;
+    background-color: var(--secondaryColor);
   }
   
   .post-content {
-    font-size: 5px;
+    font-size: 1.0rem;
     line-height: 1.5;
+    color: var(--secondaryColor);
   }
   
+  .create-post {
+    font-size: 3.0rem;
+    color: var(--mainColorLight);
+  }
