--- a/frontend/src/Pages/stats.css
+++ b/frontend/src/Pages/stats.css
@@ -1,5 +1,13 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
+
+
+
+
+
 .PlayerStats {
-    font-size: 3.0rem;
+    font-size: 4.0rem;
     padding: 100px;
     color: var(--secondaryColor);
     border: 1px solid black;
@@ -8,9 +16,17 @@
 .StatsText {
     font-size: 2.0rem;
     color: var(--mainColorLight);
+    font-family:Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    
   
 }
 .Stats_Subtitle {
     color: var(--mainColor);
     opacity: 0.7;
+    font-size: 2.5rem;
+}
+.Name_Text {
+    font-size: 3.0rem;
+    margin-top: 20px;
 }
