--- a/frontend/src/Pages/Scores/Soccer/premleague.css
+++ b/frontend/src/Pages/Scores/Soccer/premleague.css
@@ -1,6 +1,19 @@
-table {
+.soccer-container {
+    display: flex;
+    width: 100%;
+  }
+  
+  .standings-container,
+  .fixtures-container {
+    flex: 1;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 100%;
+  }
+  
+  table {
     border-collapse: collapse;
-    width: 50%;
+    width: 100%;
   }
   
   th,
@@ -11,7 +24,7 @@ table {
   
   th {
     background-color: rgb(102, 102, 102);
-    color: rgb(0, 0, 0);;
+    color: rgb(0, 0, 0);
   }
   
   /* Set alternating row background colors */
@@ -35,7 +48,7 @@ table {
     font-size: 1.2rem;
     text-align: center;
   }
-
+  
   /* Set styles for table header */
   #standings-table th {
     font-size: 1.2rem;
@@ -64,15 +77,14 @@ table {
   #standings-table td:last-child {
     font-size: 1.2rem;
     font-weight: bold;
-    color: rgb(0, 0, 0);;
+    color: rgb(0, 0, 0);
   }
   
-  /* Set styles for top 4 teams */
   #standings-table tr:nth-child(-n+20) {
     font-size: 1.2rem;
-    color: rgb(0, 0, 0);;
+    color: rgb(0, 0, 0);
   }
-
+  
   #standings-table td .rank {
     width: 20%;
     text-align: center;
@@ -86,20 +98,52 @@ table {
   #standings-table td .team-name {
     width: 70%;
   }
-
-.premleague {
-font-size: 1.5rem;
-font-weight: bold;
-text-align: center;
-background-color: #fff;
-color: rgb(0, 0, 0);
-padding: 20px;
-width: 50%;
-}
-
-.premleagueicon {
+  
+  .premleague {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: #fff;
+    color: rgb(0, 0, 0);
+    padding: 20px;
+    width: 100%;
+  }
+  
+  .premleagueicon {
     max-height: 2rem;
     max-width: 2rem;
     background-color: #fff;
     color: rgb(0, 0, 0);
-}
+  }
+  
+  .recentresults {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: #fff;
+    color: rgb(0, 0, 0);
+    padding: 20px;
+    width: 100%;
+  }
+  
+  .premleagueicon2 {
+    max-height: 2rem;
+    max-width: 2rem;
+    background-color: #fff;
+    color: rgb(0, 0, 0);
+  }
+  
+  #fixtures-table th {
+    font-size: 1.5rem;
+    align-items: center;
+  }
+  
+  #fixtures-table td {
+    font-size: 2.0rem;
+    color:rgb(0,0,0);
+  }
+  
+  #fixtures-table td .logos {
+    max-height: 4.0rem;
+    max-width: 4.0rem;
+  }
