Added standings and recent games for more leagues
Included LaLiga Standings and Games
Included Bundesliga Standings and Games

--- a/frontend/src/Pages/Scores/Soccer/soccer.css
+++ b/frontend/src/Pages/Scores/Soccer/soccer.css
@@ -1,4 +1,6 @@
-.premleague-title-icon {
+.premleague-title-icon
+.laliga-title-icon
+.bundesliga-title-icon {
     max-height: 20rem;
     max-width: 20rem;
     background-color: #fff;
