--- a/frontend/src/Pages/posts.css
+++ b/frontend/src/Pages/posts.css
@@ -1,53 +1,34 @@
-.post-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.post-box {
-  width: 100%;
-  max-width: 800px;
-  margin: 20px;
-  border: 1px solid black;
-  border-radius: 10px;
-}
-
 .post {
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  height: 100%;
-}
-
-.post-header {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding: 20px;
+  border: 1px solid black;
+  margin-bottom: 20px;
+  position: relative; /* added */
 }
 
 .post-title {
-  font-size: 24x;
-  font-weight: bold;
-  text-align: center;
-  margin: 0;
+  text-align: left;
+  margin-bottom: 20px;
 }
 
-.post-timestamp {
-  font-size: 14px;
-  margin: 0;
+.post-text {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.post-like {
+  margin-right: auto;
+}
+
+.timestamp {
+  position: absolute; /* updated */
+  bottom: 0;
+  right: 0;
+  margin: 0.5rem;
 }
 
 .post-content {
-  margin-top: 10px;
-  text-align: left;
-  font-size: medium;
+  text-align: right;
 }
-
-.post-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-}
-
-
